--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,82 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
   width: 187px;
   margin-left: 9px;
 }
+.grow{
+  display: flex;
+  margin: 136 auto;
+}
+.grow_title{
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 45px;
+  color: #1C1C1C;
+  max-width: 415px;
+  padding-top: 185px;
+}
+.grow_flex{
+  display: flex;
+  gap: 34px;
+}
+.grow_element{
+  max-width: 333px;
+  text-align: center;
+}
+.grow_item{
+  padding: 35px 0 85px;
+  background: #FFFFFF;
+  box-shadow: 0px 2px 4px rgba(192, 192, 192, 0.5);
+  border-radius: 0px 0px 7px 7px;
+
+}
+.grow_pretitle{
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 22px;
+  text-align: center;
+  color: #000000;
+  margin-bottom: 28px;
+}
+.grow_text{
+font-weight: 400;
+font-size: 18px;
+line-height: 22px;
+color: #6F2CFF;
+max-width: 219px;
+margin: 0 auto;
+
+}
+.commerce{
+  margin-bottom: 136px;
+  text-align: center;
+}
+.commerce_title{
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 45px;
+  color: #000000;
+  margin-bottom: 79px;
+}
+.commerce_flex{
+  display: flex;
+  gap: 149px;
+}
+.commerce_pretitle{
+  font-weight: 700;
+  font-size: 19px;
+  line-height: 23px;
+  color: #000000;
+  margin: 42px 0 16px;
+}
+.commerce_text{
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 22px;
+  color: #000000;
+  max-width: 316px;
+  
+
+}
+
 .main_footer{
   background: #20003C;
 }
@@ -137,3 +213,4 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
   background: #6F2CFF;
   border-radius: 20px;
 }
+
